@@ -59,7 +59,7 @@ class KrusaderView : public QWidget  {
 public:
 	KrusaderView(QWidget *parent=0);
 	~KrusaderView(){}
-  void start(QString leftPath = QString::null, QString rightPath = QString::null);
+  void start(QStringList leftTabs, int leftActiveTab, QStringList rightTabs, int rightActiveTab);
   void cmdLineFocus();  // command line receive's keyboard focus
   void cmdLineUnFocus();// return focus from command line to active panel
   inline PanelManager *activeManager() const { return (activePanel==left ? leftMng : rightMng); }
